# gettajob

./: .gitignore  PRD.md  README.md
.claude/commands/: prime.md
web/: .env.example  package-lock.json  package.json
web/app/: BulkOpenButton.tsx  StarButton.tsx  globals.css  layout.tsx  page.tsx
web/app/jobs/[id]/: page.tsx
web/app/resources/: page.tsx
web/lib/: actions.ts  db.ts  jobs.ts  resources.ts
worker/: .env.example  config.json  pyproject.toml
worker/src/gettajob/: __main__.py  clearance.py  cli.py  config.py  db.py  db_postgres.py  db_sqlite.py  detector.py  experience.py  gmail_parser.py  models.py  scorer.py
worker/src/gettajob/connectors/: _html.py  ashby.py  base.py  greenhouse.py  lever.py  usajobs.py  workday.py
